--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <h1>Calculator</h1>
+    <div class="col-md-4">
     <form id="add">
-      <div class="form-group"><label for="add1">1st number:</label><input id="add1" class="form-control" type="text"></div>
-      <div class="form-group"><label for="add2">2nd number:</label><input id="add2" class="form-control" type="text"></div>
-      <button type="submit" class="btn">Add1</button>
+      <div class="form-group"><label for="add1">1st number:</label><input id="add1" class="form-control" type="text"><br><br></div>
+      <div class="form-group"><label for="add2">2nd number:</label><input id="add2" class="form-control" type="text"><br><br></div>
+      <button type="submit" class="btn">Add!</button>
+   </div>
    </form>
   </body>
 </html>
