--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <div class="form-group"><label for="add1">1st number:</label><input id="add1" class="form-control" type="text"><br><br></div>
       <div class="form-group"><label for="add2">2nd number:</label><input id="add2" class="form-control" type="text"><br><br></div>
       <button type="submit" class="btn">Add!</button>
-   </div>
    </form>
+   <div id="output"></div>
+   </div>
   </body>
 </html>
