build a user interface for the calculator's subtract capacity

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   </head>
   <body>
     <h1>Calculator</h1>
-    <div class="col-md-4">
+    <div class="col-md-3">
     <form id="add">
       <div class="form-group"><label for="add1">1st number:</label><input id="add1" class="form-control" type="text"><br><br></div>
       <div class="form-group"><label for="add2">2nd number:</label><input id="add2" class="form-control" type="text"><br><br></div>
-      <button type="submit" class="btn">Add!</button>
+      <button type="submit" class="btn">Add!</button><br><br>
+   </form>
+   <div id="output"></div>
+   <form id="subtract">
+      <div class="form-group"><label for="number1">1st number</label><input id="number1" class="form-control" text="text"></input><br><br></div>
+      <div class="form-group"><label for="number2">2nd number</label><input id="number2" class="form-control" text="text"></input><br><br></div>
+      <button type="submit" class="btn">Subtract!</button>
    </form>
    <div id="output"></div>
    </div>
